# University

First Year/1 Sem - ASM/Ordini/: None.txt
First Year/1 Sem - ASM/src/: EDF.s  HPF.s  pianificatore.s  print.s  read.s
First Year/2 Sem - SIS/: FSMD.blif  design.sv  output_verilog.txt  testbench.script  testbench.sv
First Year/2 Sem - SIS/non_ottimizzato/: const0.blif  const1.blif  controllo.blif  datapath.blif  morra.blif  mux1.blif  mux2_da_5.blif  mux4_da_1.blif  or.blif  reg1.blif  somm_5.blif  sommatore.blif  uguale1.blif  uguale2.blif  uguale5.blif  xor.blif
First_Year/Assembly/: Makefile
First_Year/Assembly/Ordini/: Both.txt  EDF.txt
First_Year/Assembly/src/: itoa.s
First_Year/SIS-Verilog/non_ottimizzato/: controllo_man.blif  cv.blif  demux.blif  demux2_da2.blif  maggiore5.blif  mux2.blif  mux4_da_2.blif  mux4_da_5.blif  reg2.blif  reg5.blif  somm_2.blif
Second_Year/MediGlyk/: BUG.txt  pom.xml
Second_Year/MediGlyk/src/main/java/diabetici/dao/: AssunzioneDAO.java  DatabaseManager.java  LogDAO.java  MedicoDAO.java  NotificaDAO.java  PazienteDAO.java  PrescrizioneDAO.java  RilevazioneDAO.java  (+3 more)
Second_Year/MediGlyk/src/main/java/mcv/: Main.java
Second_Year/MediGlyk/src/main/resources/: EliminaMedicoScene.fxml  HomePazienteScene.fxml  PrescrizioniMedico.fxml  PrescrizioniScene.fxml
Second_Year/SHA-256/: CMakeLists.txt  README.md  file.txt
Second_Year/SHA-256/inc/: cache.h  errExit.h  queue.h  request_handler.h
Second_Year/SHA-256/src/: client.c  errExit.c
Second_Year/SHA-256/src/server/: cache.c  main.c  queue.c  request_handler.c
(+63 files in other folders)
